--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=testdeploy2.ctu0yw66agro.us-west-2.rds.amazonaws.com
+DB_HOST=deploy-laravel.ctu0yw66agro.us-west-2.rds.amazonaws.com
 DB_PORT=3306
 DB_DATABASE=test_deploy
 DB_USERNAME=admin
-DB_PASSWORD=on0oow4vPtey4NOz9kYh
+DB_PASSWORD=Thuat.03
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
