hello anh thanh: ))

--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ DB_HOST=deploy-laravel.ctu0yw66agro.us-west-2.rds.amazonaws.com
 DB_PORT=3306
 DB_DATABASE=test_deploy
 DB_USERNAME=admin
-DB_PASSWORD=Thuat.03
+DB_PASSWORD=Thuathell
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
